--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,11 @@
 
 .slicecard-BG {
   background-color: #4f46e5;
+  box-shadow: 0px 0px 20px 0px rgb(162 163 163);
+}
+.SlideCard-right-main{
+  border: 1px solid rgb(202, 202, 202);
+  box-shadow: 0px 0px 20px 0px rgb(206, 206, 206);
 }
 
 /* Slice Card */
