--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,7 +43,7 @@
 
 .Faq-card {
   background-color: #15cf74;
-  box-shadow: 0px 0px 20px 2px rgb(162 163 163);
+  box-shadow: 0px 0px 20px 0px rgb(179, 179, 179);
 }
 .Faq-card-header {
     font-family:  'Signika Negative', sans-serif;;
@@ -56,9 +56,28 @@
   color: rgb(234, 234, 234);
   font-size: 20px;
 }
-/* FAQ */
+.Faq-Section{
+  background-image: url('../public/Img/faq_bg1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* backdrop-filter: blur(10000px); */
+  box-shadow: 0px -20px 50px 30px white inset;
+}
+.Faq-Section2{
+  background-color: #F8CB41;
+  box-shadow: 0 6px 4px -0px white inset, 0 -6px 4px -0px white inset; 
+  /* box-shadow: 0px 0px 50px 10px white inset; */
+}
+/* FAQ */ 
 @media only screen and (max-width: 600px) {
   .container {
     width: 100%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .SlideCard-right {
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 33px;
   }
 }
