--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@
 
 /* FAQ */
 .FAQ-main-container{
-  background-color: #8781fe
+  background-color: #50E3C2
   /* background-color: #A020F0 */
   /* background-color: rgb(232, 231, 231) */
 }
